--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "tsc": "^2.0.4",
     "typescript": "^5.5.3",
     "typescript-eslint": "^7.16.0"
+  },
+  "dependencies": {
+    "express": "^4.19.2"
   }
 }
